# tool-log-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
core/: analyzer.py  config.py  exporter.py  filter.py  parser.py  summary.py
src/log_analyzer/: __main__.py
src/log_analyzer/core/: analyzer.py  config.py
src/logan_iq/: __main__.py
src/logan_iq/core/: config.py  exporter.py  parser.py
src/logan_iq/exports/: fil_logs.json  filtered_logs.csv  gr.csv  gr.json
src/tests/: test_config.py  test_exporter.py  test_filter.py  test_parser.py  test_summary.py
tests/: test_filter.py  test_parser.py  test_summary.py
